# robot_arm

src/my_arm/: CMakeLists.txt  README.md  SYSTEM_STRUCTURE.md  my_arm.xml  package.xml
src/my_arm/bringup/config/: my_arm_controller.yaml
src/my_arm/bringup/launch/: my_arm_controller.launch.py
src/my_arm/controller/: my_arm_controller.cpp
src/my_arm/controller/include/my_arm/: my_arm_controller.hpp
src/my_arm/description/launch/: view_my_arm.launch.py
src/my_arm/description/ros2_control/: my_arm.ros2_control.xacro
src/my_arm/description/urdf/: my_arm.urdf.xacro
src/my_arm/hardware/: my_arm_hardware.cpp
src/my_arm/hardware/include/my_arm/: my_arm_hardware.hpp
src/my_arm/reference_generator/: send_trajectory.cpp
src/my_arm/scripts/: joint_state_to_forward_command.py
src/my_arm/test/: test_my_arm_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
src/my_arm_description/: CMakeLists.txt  README.md  package.xml
src/my_arm_description/my_arm/rviz/: view_robot.rviz
src/my_arm_description/my_arm/urdf/: my_arm_description.urdf.xacro
src/my_arm_description/my_arm/urdf/inc/: create_link.xacro  joint_module.xacro
src/my_arm_moveit_config/: CMakeLists.txt  README.md  package.xml
src/my_arm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_cpp.yaml  my_arm.srdf  planning_pipeline.yaml  planning_scene_monitor.yaml  trajectory_execution.yaml
src/my_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py
